# koko.whisper

./: README.md  package.json  pnpm-lock.yaml
.github/workflows/: ci.yml  privacy.yml  release.yml  security.yml
scripts/: release.sh
src/: app.html
src-tauri/: Cargo.toml  Info.plist  entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: audio.rs  commands.rs  config.rs  lib.rs  main.rs  model.rs  session.rs  state.rs  transcription.rs  tray.rs
src/lib/: RecordingView.svelte  Settings.svelte  TranscriptionList.svelte
src/routes/: +page.svelte
